# Voxels

./: CMakeLists.txt  README.md  vcpkg.json
config/: color-palette.ini  settings.ini  world-settings.ini
include/game/: Engine.h  Game.h  Input.h  Player.h  World.h
include/glad/: glad.h
include/level/: WorldGenerator.h
include/render/: Shader.h  ShaderManager.h  View.h  Voxel.h  VoxelChunk.h  VoxelVertex.h  Window.h
include/util/: Clock.h  Color.h  ColorPalette.h  Key.h  Material.h  PerlinGenerator.h  Random.h  Settings.h
shader/: voxel.frag  voxel.vert
src/: main.cpp
src/game/: Engine.cpp  Game.cpp  Input.cpp  Player.cpp  World.cpp
src/glad/: glad.c
src/level/: WorldGenerator.cpp
src/render/: Shader.cpp  ShaderManager.cpp  View.cpp  Voxel.cpp  VoxelChunk.cpp  VoxelVertex.cpp  Window.cpp
src/util/: Clock.cpp  Color.cpp  ColorPalette.cpp  Key.cpp  PerlinGenerator.cpp  Random.cpp  Settings.cpp
